fixed bg on mobile

--- a/sass/_about.sass
+++ b/sass/_about.sass
@@ -99,8 +99,9 @@
     transition: .5s ease
     text-decoration: none
     &:hover
-      background-color: #fff
-      color: $accent
+      background-color: $pink
+      color: #fff
+      border-color: $pink
 
   .back-to-top
     display: none
