--- a/sass/_contact.sass
+++ b/sass/_contact.sass
@@ -23,8 +23,9 @@
     transition: .5s ease
     text-decoration: none
     &:hover
-      color: $accent
-      background-color: #fff
+      color: #fff
+      background-color: $pink
+      border-color: $pink
 
   .contact-icon
     display: flex
@@ -65,4 +66,4 @@
       color: #fff
 
   .back-to-top:hover .fa
-    color: $accent
+    color: $pink
