--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -1,7 +1,7 @@
 body
   background:
     image: url(../img/bg.jpg)
-    position: -370px -20px
+    position: -450px -250px
   font-family: 'Raleway', sans-serif
   overflow-x: hidden
   margin: 0px
@@ -45,7 +45,7 @@ body
 ::-webkit-scrollbar
   width: 5px
 ::-webkit-scrollbar-track
-  background-color: $accent
+  background-color: $pink
   border-radius: 10px
 ::-webkit-scrollbar-thumb
   border-radius: 10px
