--- a/sass/_mobile.sass
+++ b/sass/_mobile.sass
@@ -2,6 +2,8 @@
 
   //  GLOBAL
   body
+    background-position: -850px -209px
+
     #title, #about, #portfolio, .contact
       padding: 20px
       h2
@@ -24,7 +26,7 @@
         display: block
       #about-btn:hover:before
         transform: rotateZ(-45deg) translate(20%, 37%)
-        color: $accent
+        color: $pink
       #about-btn:after
         display: none
       #about-btn
@@ -44,7 +46,7 @@
         display: block
       #portfolio-btn:hover:before
         transform: rotateZ(-45deg) translate(-2%, -290%)
-        color: $accent
+        color: $pink
       #portfolio-btn:after
         display: none
       #portfolio-btn
@@ -58,7 +60,7 @@
         &::after
           display: none
         p
-          color: $accent
+          color: $pink
 
       hr
         display: none
