--- a/sass/_project.sass
+++ b/sass/_project.sass
@@ -7,16 +7,16 @@
   box-sizing: border-box
 
   .marked
-    color: $accent
+    color: $pink
     font-weight: bold
 
   .link
-    color: $accent
+    color: $pink
     text-decoration: none
     padding: 10px 20px
     margin-top: 10px
     display: inline-block
-    border: 1px solid $accent
+    border: 1px solid $pink
     transition: .5s ease
     position: relative
     &::after
@@ -27,11 +27,11 @@
       top: 0
       right: 0
       padding: 10px
-      color: $accent
+      color: $pink
       background-color: #fff
       transition: .5s ease
     &:hover
-      background-color: $accent
+      background-color: $pink
       color: #fff
       padding-right: 50px
 
@@ -79,14 +79,14 @@
       -o-transform:rotate(-45deg)
       transform: rotate(-45deg)
       font-size: 20px
-      color: $accent
+      color: $pink
 
     //  LEFT BUTTON
     #about-btn
       display: inline-block
       padding: 15px
       margin-right: 15px
-      border: 1px solid $accent
+      border: 1px solid $pink
       -webkit-transform: rotate(45deg)
       -moz-transform: rotate(45deg)
       -ms-transform:rotate(45deg)
@@ -95,14 +95,14 @@
       transition: .5s ease
       position: relative
       &:hover
-        background-color: $accent
+        background-color: $pink
       &::before
         content: ''
         visibility: hidden
         opacity: 0
         width: 50px
         height: 50px
-        border: 1px solid $accent
+        border: 1px solid $pink
         position: absolute
         left: 0
         top: 0
@@ -120,7 +120,7 @@
         position: absolute
         transition: .5s ease
         transform: rotateZ(-45deg) translate(-26%, -235%)
-        color: $accent
+        color: $pink
 
     #about-btn:hover:before
       visibility: visible
@@ -141,7 +141,7 @@
       display: inline-block
       padding: 15px
       margin-left: 15px
-      border: 1px solid $accent
+      border: 1px solid $pink
       -webkit-transform: rotate(45deg)
       -moz-transform: rotate(45deg)
       -ms-transform:rotate(45deg)
@@ -150,7 +150,7 @@
       transition: .5s ease
       position: relative
       &:hover
-        background-color: $accent
+        background-color: $pink
       &::before
         content: 'Next'
         text-decoration: none
@@ -163,14 +163,14 @@
         position: absolute
         transition: .5s ease
         transform: rotateZ(-45deg) translate(0%, -200%)
-        color: $accent
+        color: $pink
       &::after
         content: ''
         visibility: hidden
         opacity: 0
         width: 50px
         height: 51px
-        border: 1px solid $accent
+        border: 1px solid $pink
         position: absolute
         right: -1px
         bottom: -1px
@@ -199,9 +199,9 @@
       left: 50%
       transform: translateX(-51%) rotateZ(45deg)
       transition: .5s ease
-      border: 1px solid $accent
+      border: 1px solid $pink
       &:hover
-        background-color: $accent
+        background-color: $pink
         cursor: pointer
       &::before
         content: 'Menu'
@@ -210,14 +210,14 @@
         position: absolute
         transition: 0.5s ease
         transform: rotateZ(-45deg) translate(-20%, 0)
-        color: $accent
+        color: $pink
       &::after
         content: ''
         visibility: hidden
         opacity: 0
         width: 50px
         height: 51px
-        border: 1px solid $accent
+        border: 1px solid $pink
         position: absolute
         bottom: -1px
         right: -1px
